Fix jump button again.

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1103,8 +1103,8 @@ background on hover (unless active) */
 }
 
 .scroll-down {
-	position: fixed;
-	bottom: 61px;
+	position: absolute;
+	bottom: 16px;
 	right: 16px;
 	z-index: 2;
 	transition: right 0.2s ease-in-out;
